--- a/index-START.html
+++ b/index-START.html
@@ -32,7 +32,8 @@
       }
 
       function displayMatches() {
-        console.log(this.value);
+        const matchArray = findMatches(this.value, cities);
+        console.log(matchArray);
       }
 
       const searchInput = document.querySelector('.search');
