--- a/index-START.html
+++ b/index-START.html
@@ -33,7 +33,15 @@
 
       function displayMatches() {
         const matchArray = findMatches(this.value, cities);
-        console.log(matchArray);
+        const html = matchArray.map(place => {
+          return `
+            <li>
+              <span class="name">${place.city}, ${place.state}</span>
+              <span class="population">${place.population}</span>
+            </li>
+          `;
+        }).join('');
+        suggestions.innerHTML = html;
       }
 
       const searchInput = document.querySelector('.search');
@@ -45,3 +53,4 @@
     </script>
   </body>
 </html>
+
