--- a/index-START.html
+++ b/index-START.html
@@ -23,6 +23,10 @@
         response.json().then((json) => cities.push(...json))
       );
 
+      function numberWithCommas(x) {
+        return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ',');
+      }
+
       function findMatches(wordToMatch, cities) {
         return cities.filter((place) => {
           // TODO
@@ -33,17 +37,25 @@
 
       function displayMatches() {
         const matchArray = findMatches(this.value, cities);
-        const html = matchArray.map(place => {
-          const regex = new RegExp(this.value, 'gi');
-          const cityName = place.city.replace(regex, `<span class="hl">${this.value}</span>`)
-          const stateName = place.state.replace(regex, `<span class="hl">${this.value}</span>`)
-          return `
+        const html = matchArray
+          .map((place) => {
+            const regex = new RegExp(this.value, 'gi');
+            const cityName = place.city.replace(
+              regex,
+              `<span class="hl">${this.value}</span>`
+            );
+            const stateName = place.state.replace(
+              regex,
+              `<span class="hl">${this.value}</span>`
+            );
+            return `
             <li>
               <span class="name">${cityName}, ${stateName}</span>
-              <span class="population">${place.population}</span>
+              <span class="population">${numberWithCommas(place.population)}</span>
             </li>
           `;
-        }).join('');
+          })
+          .join('');
         suggestions.innerHTML = html;
       }
 
@@ -52,8 +64,6 @@
 
       searchInput.addEventListener('change', displayMatches);
       searchInput.addEventListener('keyup', displayMatches);
-
     </script>
   </body>
 </html>
-
